--- a/templates/base.html
+++ b/templates/base.html
@@ -30,7 +30,10 @@
         {% endif %}
 
 
-        <a class="btn btn-outline-secondary btn-sm" href="{% url 'logout' %}">Logout</a>
+        <form method="post" action="{% url 'logout' %}" class="d-inline">
+          {% csrf_token %}
+          <button type="submit" class="btn btn-outline-secondary btn-sm">Logout</button>
+        </form>
       {% endif %}
     </div>
   </div>
